--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -374,10 +374,10 @@ jobs:
       - name: Get test user credentials
         uses: dkershner6/aws-ssm-getparameters-action@v1
         with:
-          parameterPairs: "/eregulations/http/user=CYPRESS_TEST_USERNAME,
-            /eregulations/http/password=CYPRESS_TEST_PASSWORD,
-            /eregulations/http/admin_test_user=CYPRESS_ADMIN_TEST_USERNAME,
-            /eregulations/http/admin_test_password=CYPRESS_ADMIN_TEST_PASSWORD"
+          parameterPairs: "/eregulations/http/user = CYPRESS_TEST_USERNAME,
+            /eregulations/http/password = CYPRESS_TEST_PASSWORD,
+            /eregulations/http/admin_test_user = CYPRESS_ADMIN_TEST_USERNAME,
+            /eregulations/http/admin_test_password = CYPRESS_ADMIN_TEST_PASSWORD"
           withDecryption: "true" # defaults to true
       # Setup node environment
       - name: Setup Node
