--- a/solution/ui/e2e/cypress.env.json.template
+++ b/solution/ui/e2e/cypress.env.json.template
@@ -1,6 +1,6 @@
 {
   "TEST_USERNAME": "Use this template to create your own local cypress.env.json file.  Replace these values with a test username and test password that you have created locally using Django Admin.",
   "TEST_PASSWORD": "Once you save this file as cypress.env.json, it will be ignored by Github."
-  "ADMIN_TEST_USERNAME": "Use this template to create your own local cypress.env.json file.  Replace these values with a test username and test password that you have created locally using Django Admin.",
-  "ADMIN_TEST_PASSWORD": "Once you save this file as cypress.env.json, it will be ignored by Github."
+  "READER_USERNAME": "Use this template to create your own local cypress.env.json file.  Replace these values with a test username and test password that you have created locally using Django Admin.",
+  "READER_PASSWORD": "Once you save this file as cypress.env.json, it will be ignored by Github."
 }
