chore: comment out npm install that may not be needed

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -106,7 +106,7 @@ jobs:
         run: |
           pushd solution/text-extractor
           npm install serverless -g
-          npm install
+          #npm install
           serverless deploy --stage dev${PR}
           popd
   deploy-django:
