updated environment value and action version

--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        environment: ["prod"]
+        environment: ["prod-security-hub"]
       fail-fast: false
     environment:
       name: ${{ matrix.environment }}
