--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -52,8 +52,8 @@ jobs:
               jira-host: 'jiraent.cms.gov'
               jira-project-key: 'EREGCSC'
               jira-issue-type: 'Bug'
-              jira-labels: 'eRegs,snyk'
-              jira-title-prefix: '[EREGCSC] - Snyk :'
+              # jira-labels: 'eRegs,snyk'
+              # jira-title-prefix: '[EREGCSC] - Snyk :'
               # jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
               is_jira_enterprise: true
               #assign-jira-ticket-to: ''
