--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -51,7 +51,7 @@ jobs:
               jira-token: ${{ secrets.JIRA_TOKEN }}
               jira-host: 'jiraent.cms.gov'
               jira-project-key: 'EREGCSC'
-              jira-issue-type: 'Bug'
+              # jira-issue-type: 'Bug'
               # jira-labels: 'eRegs,snyk'
               # jira-title-prefix: '[EREGCSC] - Snyk :'
               # jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
