--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -2,6 +2,7 @@
   "name": "eregs-vite",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build --emptyOutDir",
@@ -17,9 +18,9 @@
     "vuetify": "^2.7.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vitejs/plugin-vue2": "^2.3.1",
     "sass": "~1.32",
     "unplugin-vue-components": "^0.25.0",
-    "vite": "^4.5"
+    "vite": "^5.0"
   }
 }
