--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -1,6 +1,7 @@
 {
   "name": "regulations",
   "description": "",
+  "type": "module",
   "scripts": {
     "test-vue": "vitest --environment jsdom",
     "test-vue-coverage": "vitest --environment jsdom run --coverage",
@@ -18,7 +19,7 @@
   "dependencies": {
     "@cmsgov/design-system": "^2.5.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@vitejs/plugin-vue2": "^2.2.0",
+    "@vitejs/plugin-vue2": "^2.3.1",
     "@vue/test-utils": "^1.3.5",
     "export-from-json": "^1.6.0",
     "flush-promises": "^1.0.2",
@@ -61,7 +62,7 @@
     "vitest": "^0.31.0",
     "webpack": "^5.76.0",
     "whatwg-fetch": "^3.6.2",
-    "vite": "^4.5"
+    "vite": "^5.0"
   },
   "msw": {
     "workerDirectory": "msw"
