chore: first step to upgrading -- no failures on vite builds

--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -5,6 +5,7 @@
     },
     "extends": [
         "plugin:vue/recommended",
+        "plugin:vuetify/base",
         "airbnb-base",
         "prettier",
         "plugin:storybook/recommended"
@@ -13,7 +14,10 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
-    "plugins": ["vue"],
+    "plugins": [
+        "vue",
+        "vuetify"
+    ],
     "rules": {
         "eqeqeq": "off",
         "import/no-unresolved": "off",
