--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -17,13 +17,14 @@
     "mitt": "^3.0.1",
     "shelljs": "^0.8.5",
     "vite-plugin-css-injected-by-js": "^3.3.1",
-    "vue": "^2.7.15",
-    "vuetify": "^2.7.1"
+    "vue": "^3.3.8",
+    "vuetify": "^3.4.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.3.1",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint-plugin-vuetify": "^2.1.0",
     "fast-glob": "^3.2.12",
-    "unplugin-vue-components": "^0.25.0",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^5.0"
   }
 }
