--- a/solution/ui/regulations/eregs-vite/package.json
+++ b/solution/ui/regulations/eregs-vite/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "vue": "^2.7.16",
-    "vue-router": "^3.6.5",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5",
     "vue-template-compiler": "^2.7.16",
-    "vuetify": "^2.7.1"
+    "vuetify": "^3.4.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue2": "^2.3.1",
-    "sass": "~1.32",
-    "unplugin-vue-components": "^0.25.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint-plugin-vuetify": "^2.1.0",
+    "sass": "^1.69.3",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^5.0"
   }
 }
