--- a/solution/ui/regulations/package.json
+++ b/solution/ui/regulations/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@cmsgov/design-system": "^2.5.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@vitejs/plugin-vue2": "^2.3.1",
+    "@vitejs/plugin-vue": "^4.5.0",
     "@vue/test-utils": "^1.3.5",
     "flush-promises": "^1.0.2",
     "localforage": "^1.10.0",
@@ -27,7 +27,8 @@
     "react": "16.x",
     "react-dom": "16.x",
     "sass": "^1.69.3",
-    "vue": "^2.7.10",
+    "vue": "^3.3.8",
+    "vuetify": "^3.4.3",
     "vue-clickaway": "^2.2.2",
     "vue-loader": "^16.0.0",
     "vue-template-compiler": "^2.7.0"
@@ -51,6 +52,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-vue": "^9.9.0",
+    "eslint-plugin-vuetify": "^2.1.0",
     "happy-dom": "^9.18.3",
     "jsdom": "^22.0.0",
     "msw": "^1.2.1",
