--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -45,18 +45,18 @@ jobs:
             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           
         - name: use the custom github  action to parse Snyk output
-          uses: Enterprise-CMCS/macfc-security-scan-report@v2.7.6
+          uses: Enterprise-CMCS/macfc-security-scan-report@v2.7.7
           with:
               jira-username: ${{ secrets.JIRA_USERNAME }}
               jira-token: ${{ secrets.JIRA_TOKEN }}
               jira-host: 'jiraent.cms.gov'
               jira-project-key: 'EREGCSC'
-              # jira-issue-type: 'Bug'
-              # jira-labels: 'eRegs,snyk'
-              # jira-title-prefix: '[EREGCSC] - Snyk :'
+              jira-issue-type: 'Bug'
+              jira-labels: 'eRegs,snyk'
+              jira-title-prefix: '[EREGCSC] - Snyk :'
               # jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
-              is_jira_enterprise: true
-              #assign-jira-ticket-to: ''
+              # is_jira_enterprise: true
+              assign-jira-ticket-to: 'TTHO'
               scan-output-path: 'snyk_output.txt'
               scan-type: 'snyk'
               
