--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -43,9 +43,9 @@ jobs:
             snyk test --all-projects --json > snyk_output.txt || true
           env:
             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-            
+
         - name: list
-          run: ls
+          run: cat snyk_output.txt
           
         - name: use the custom github  action to parse Snyk output
           uses: Enterprise-CMCS/macfc-security-scan-report@v2.7.7
