--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -45,7 +45,7 @@ jobs:
             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
         - name: use the custom github  action to parse Snyk output
-          uses: Enterprise-CMCS/macfc-security-scan-report@v2.8.0
+          uses: Enterprise-CMCS/macfc-security-scan-report@v2.8.0.1
           with:
               jira-username: ${{ secrets.JIRA_USERNAME }}
               jira-token: ${{ secrets.JIRA_TOKEN }}
@@ -54,9 +54,9 @@ jobs:
               jira-issue-type: 'Bug'
               jira-labels: 'eRegs,snyk'
               jira-title-prefix: '[EREGCSC] - Snyk :'
-              jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
               is_jira_enterprise: true
-              assign-jira-ticket-to: 'TTHO'
+              # jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
+              # assign-jira-ticket-to: 'TTHO'
               scan-output-path: 'snyk_output.txt'
               scan-type: 'snyk'
               
