--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -55,8 +55,8 @@ jobs:
               jira-labels: 'eRegs,snyk'
               jira-title-prefix: '[EREGCSC] - Snyk :'
               is_jira_enterprise: true
-              # jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
-              # assign-jira-ticket-to: 'TTHO'
+              jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
+              assign-jira-ticket-to: 'TTHO'
               scan-output-path: 'snyk_output.txt'
               scan-type: 'snyk'
               
