--- a/.github/workflows/snyk-test.yml
+++ b/.github/workflows/snyk-test.yml
@@ -52,13 +52,11 @@ jobs:
               jira-host: 'jiraent.cms.gov'
               jira-project-key: 'EREGCSC'
               jira-issue-type: 'Bug'
-              # jira-labels: 
-              #   - 'eRegs'
-              #   - 'snyk'
+              jira-labels: 'eRegs,snyk'
               jira-title-prefix: '[EREGCSC] - Snyk :'
               is_jira_enterprise: 'true'
               jira-custom-field-key-value: '{ "customfield_10100": "EREGCSC-1989" }'
-              # assign-jira-ticket-to: 'TTHO'
+              assign-jira-ticket-to: 'TTHO'
               scan-output-path: 'snyk_output.txt'
               scan-type: 'snyk'
               
