--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,9 +153,11 @@ jobs:
       - name: Get test user credentials
         uses: dkershner6/aws-ssm-getparameters-action@v1
         with:
-            parameterPairs: "/eregulations/http/test_user = CYPRESS_TEST_USERNAME,
-                /eregulations/http/test_password = CYPRESS_TEST_PASSWORD"
-            withDecryption: "true" # defaults to true
+          parameterPairs: "/eregulations/http/user = CYPRESS_TEST_USERNAME,
+            /eregulations/http/password = CYPRESS_TEST_PASSWORD,
+            /eregulations/http/reader_user = CYPRESS_READER_USERNAME,
+            /eregulations/http/reader_password = CYPRESS_READER_PASSWORD"
+          withDecryption: "true" # defaults to true
       - name: end-to-end tests
         uses: cypress-io/github-action@v5
         with:
