--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -46,7 +46,7 @@ provider:
     DEPLOY_NUMBER: ${env:RUN_ID}
     EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
     # Used for when you want to deploy your own
-    TEXT_EXTRACTOR_ARN: ${self:custom.settings.text_extractor_arn}
+    # TEXT_EXTRACTOR_ARN: ${self:custom.settings.text_extractor_arn}
     TEXTRACT_ARN: ${ssm:/eregulations/textextractor-arn}
   vpc:
     securityGroupIds:
@@ -80,7 +80,7 @@ custom:
     DB_NAME: ${self:custom.stage}
     USERNAME: eregsuser
     ALLOWED_HOST: '.amazonaws.com'
-    text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
+    # text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
   cloudfrontInvalidate:
     - distributionId: ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId}
       items:
@@ -190,7 +190,7 @@ resources:
                      - "lambda:InvokeFunction"
                    Resource:
                      - "${ssm:/eregulations/textextractor-arn}"
-                     - "${self:custom.settings.text_extractor_arn}" # Extractor created by the environment
+                    #  - "${self:custom.settings.text_extractor_arn}" # Extractor created by the environment
 
 
 plugins:
