Eregcsc 2264 -DOC, Docx added to text extractor (#1057)
* Initial commit

* update to get web working again

* Use temporarydirectory for docker

* Some clean up

* clean up docker template

* update object for config

* deploy text extractor

* update serverless-experimental

* remove npm install

* add libreoffice

* use textract before import test

* fake resposne

* fix

* clena up

* remove bad line of code

* get doc files working

* fix issue on parsing file types

* remove exception handling

* exception handling

* cx

* remove exception handling

* move return statement

* linter fix

* clean up for review

* close the file on web

* remove text extractor from serverless-exp

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -84,9 +84,10 @@ lint:
 	flake8;
 ruff:
 	docker-compose exec regulations ruff check .
+	docker-compose exec text-extractor ruff check .
 ruff-fix:
 	docker-compose exec regulations ruff --fix .
-
+	docker-compose exec text-extractor ruff --fix .
 local: ## Start a local environment with parts 400 and 433 loaded.
 local: regulations local.docker data.local
 	@echo Local environment started. Visit http://localhost:8000
