--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -47,6 +47,8 @@ provider:
     OIDC_OP_USER_ENDPOINT: ${ssm:/eregulations/oidc/user_endpoint}
     DEPLOY_NUMBER: ${env:RUN_ID}
     EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
+    BASIC_SEARCH_FILTER: ${ssm:/eregulations/basic_search_filter}
+    QUOTED_SEARCH_FILTER: ${ssm:/eregulations/quoted_search_filter}
     # Used for when you want to deploy your own
     # TEXT_EXTRACTOR_ARN: ${self:custom.settings.text_extractor_arn}
     TEXTRACT_ARN: ${ssm:/eregulations/textextractor-arn}
