chore: turn off no-unresolved eslint rule

--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -16,6 +16,7 @@
     "plugins": ["vue"],
     "rules": {
         "eqeqeq": "off",
+        "import/no-unresolved": "off",
         "no-console": ["error", { "allow": ["warn", "error"] }],
         "no-nested-ternary": "off",
         "prefer-template": "off",
