--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -94,15 +94,15 @@ jobs:
       - name: Configure AWS credentials for GitHub Actions
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: $#{{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
       # Deploy the text extractor lambda to AWS
       - name: Deploy text extractor lambda
         id: deploy-text-extractor
         if: success() && steps.findPr.outputs.number
         env:
-          PR: $#{{ steps.findPr.outputs.pr }}
-          RUN_ID: $#{{ github.run_id }}
+          PR: ${{ steps.findPr.outputs.pr }}
+          RUN_ID: ${{ github.run_id }}
         run: |
           pushd solution/text-extractor
           npm install serverless -g
