--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -79,6 +79,7 @@ jobs:
     env:
       deployextractor: false
     runs-on: ubuntu-20.04
+    # Change to true if you want to create text extractor for your experimental deploy.
     if: false
     steps:
       # Checkout the code
@@ -117,7 +118,7 @@ jobs:
     outputs:
       url: ${{ steps.deploy-regulations-site-server.outputs.url }}
     runs-on: ubuntu-20.04
-    needs: [deploy-static, ] #[deploy-static, deploy-text-extractor]
+    needs: [deploy-static, deploy-text-extractor]
     steps:
       # Checkout the code
       - name: Checkout
