--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -33,7 +33,7 @@ jobs:
           jira-project-key: EREGCSC
           jira-ignore-statuses: Done, Closed, Canceled
           jira-custom-fields: '{ "customfield_10100": "EREGCSC-1989" }'
-          aws-severities: CRITICAL, HIGH, MEDIUM
+          aws-severities: CRITICAL, HIGH, MEDIUM, LOW
           #assign-jira-ticket-to: VU6Q
           #auto-close: false
       - name: Alert Slack On Failure
