--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -192,7 +192,7 @@ resources:
                      - "lambda:InvokeFunction"
                    Resource:
                      - "${ssm:/eregulations/textextractor-arn}"
-                     - "${self:custom.settings.text_extractor_arn}" # Extractor created by the environment
+                     - "${opt:${self:custom.settings.text_extractor_arn, ${ssm:/eregulations/textextractor-arn}}" # Extractor created by the environment
 
 
 plugins:
