--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -47,6 +47,8 @@ provider:
     OIDC_OP_USER_ENDPOINT: ${ssm:/eregulations/oidc/user_endpoint}
     DEPLOY_NUMBER: ${env:RUN_ID}
     EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
+    BASIC_SEARCH_FILTER: ${ssm:/eregulations/basic_search_filter}
+    QUOTED_SEARCH_FILTER: ${ssm:/eregulations/quoted_search_filter}
     # This text extractor is for an experimental deploy if one is made.
     TEXT_EXTRACTOR_ARN: ${self:custom.settings.text_extractor_arn}
     # This text extractor is the "main dev" extractor.  Used if one is not created in experimental.
