update to prod and remove push for testing

--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -1,7 +1,6 @@
 name: Sync Security Hub findings and Jira issues
 on:
   workflow_dispatch: # for testing and manual runs
-  push:  # just for testing.
   schedule:
     - cron: "25 1 * * *" # daily at 6:25 am EST
 permissions:
@@ -11,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        environment: ["dev"]
+        environment: ["prod"]
       fail-fast: false
     environment:
       name: ${{ matrix.environment }}
