--- a/solution/ui/regulations/.eslintrc.json
+++ b/solution/ui/regulations/.eslintrc.json
@@ -17,6 +17,7 @@
     "rules": {
         "eqeqeq": "off",
         "import/no-unresolved": "off",
+        "import/first": "off",
         "no-console": ["error", { "allow": ["warn", "error"] }],
         "no-nested-ternary": "off",
         "prefer-template": "off",
