EREGCSC-2418 - Modify SecurityHub Jira Sync to Generate Low-Priority Issues (#1097)
* add LOW aws severity

* add run on push for testing

* push for testing SH workflow

* reverting change for testing

* testing dev env for low issue creation in jira

* testing jira-username for EREGCSC-2416

* x2 testing jira-username for EREGCSC-2416

* revert changes: testing jira-username for EREGCSC-2416

* test authentication not needed username

* test authentication token

* test authentication fake var

* revert test changes

* Update username var

* push to test

* update to prod and remove push for testing

--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        environment: ["prod-security-hub"]
+        environment: ["prod"]
       fail-fast: false
     environment:
       name: ${{ matrix.environment }}
@@ -28,12 +28,12 @@ jobs:
         uses: Enterprise-CMCS/security-hub-visibility@v1.0.5
         with:
           jira-token: ${{ secrets.JIRA_TOKEN }}
-          jira-username: ${{ secrets.JIRA_USERNAME }}
+          jira-username: noVal # required variable for package but not for Enterprise Jira
           jira-host: ${{secrets.JIRA_HOST}}
           jira-project-key: EREGCSC
           jira-ignore-statuses: Done, Closed, Canceled
           jira-custom-fields: '{ "customfield_10100": "EREGCSC-1989" }'
-          aws-severities: CRITICAL, HIGH, MEDIUM
+          aws-severities: CRITICAL, HIGH, MEDIUM, LOW
           #assign-jira-ticket-to: VU6Q
           #auto-close: false
       - name: Alert Slack On Failure
