Remove opt again

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -195,7 +195,7 @@ resources:
                      - "lambda:InvokeFunction"
                    Resource:
                      - "${ssm:/eregulations/textextractor-arn}"
-                     - ${opt:"${self:custom.settings.text_extractor_arn}", "${ssm:/eregulations/textextractor-arn}"} # Extractor created by the environment
+                     - "${self:custom.settings.text_extractor_arn}" # Extractor created by the environment
 
 
 plugins:
