--- a/solution/text-extractor/requirements.txt
+++ b/solution/text-extractor/requirements.txt
@@ -4,9 +4,11 @@ python-magic
 mock
 moto
 pdf2image
-textract
 ruff
 extract-msg
 pillow>=10.0.1 # not directly required, pinned by Snyk to avoid a vulnerability
 beautifulsoup4
 striprtf
+xlrd
+docx2txt
+python-pptx
