--- a/solution/ui/regulations/eregs-component-lib/package.json
+++ b/solution/ui/regulations/eregs-component-lib/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^3.5.3",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "shelljs": "^0.8.5",
     "vite-plugin-css-injected-by-js": "^3.3.0",
     "vue": "^2.7.15",
