--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -80,8 +80,10 @@ custom:
     USERNAME: eregsuser
     ALLOWED_HOST: '.amazonaws.com'
     text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
-  scripts:
-    postDeploy: ./scripts/invalidate-cloudfront.sh
+  invalidateCloudfront:
+    commands:
+      - aws cloudfront create-invalidation --distribution-id ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId} --paths "/*"
+
   associateWaf:
     name: APIGateway-eregs-allow-usa-plus-territories-${self:custom.stage}
     version: V2
