re-write the script

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -88,10 +88,9 @@ custom:
     ALLOWED_HOST: '.amazonaws.com'
     text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
     #text_extractor_arn: ''
-    invalidateCloudfront:
-      commands:
-        - aws cloudfront create-invalidation --distribution-id ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId} --paths "/*"
-
+    scripts:
+      hooks:
+        'deploy:finalize': aws cloudfront create-invalidation --distribution-id ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId} --paths "/*"
   associateWaf:
     name: APIGateway-eregs-allow-usa-plus-territories-${self:custom.stage}
     version: V2
