--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -80,10 +80,10 @@ custom:
     USERNAME: eregsuser
     ALLOWED_HOST: '.amazonaws.com'
     text_extractor_arn: ${cf:text-extractor-${self:custom.stage}.TextDashextractorLambdaFunctionQualifiedArn}
-  invalidateCloudfront:
-    commands:
-      - aws cloudfront create-invalidation --distribution-id ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId} --paths "/*"
-
+  cloudfrontInvalidate:
+    - distributionId: ${cf:cmcs-eregs-static-assets-${self:custom.stage}.CloudFrontDistributionId}
+      items:
+        - "/*"
   associateWaf:
     name: APIGateway-eregs-allow-usa-plus-territories-${self:custom.stage}
     version: V2
@@ -188,7 +188,7 @@ resources:
                    Action:
                      - "lambda:InvokeFunction"
                    Resource:
-                     - "${self:custom.settings.text_extractor_arn}"     
+                     - "${self:custom.settings.text_extractor_arn}"
     ServerlessSecurityGroup:
       Type: AWS::EC2::SecurityGroup
       Properties:
@@ -299,4 +299,5 @@ plugins:
   - serverless-python-requirements
   - serverless-wsgi
   - serverless-go-plugin
+  - serverless-cloudfront-invalidate
   - serverless-associate-waf
