EREGCSC-2484 - Weak Ciphers Enabled (#1163)
* update serverless to include the cert when the cloudfront dist is created

* hardcode the arn for now

* include quotes

* try this

* fix error

* update code to use the acm-cert in ssm

--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -165,7 +165,9 @@ resources:
             TargetOriginId: S3Origin
             ViewerProtocolPolicy: redirect-to-https
           ViewerCertificate:
-            CloudFrontDefaultCertificate: true
+            AcmCertificateArn: ${ssm:/eregulations/acm-cert-arn}
+            SslSupportMethod: sni-only
+            MinimumProtocolVersion: TLSv1.2_2021
           DefaultRootObject: index.html
 
   Outputs:
